<resources>
    <string name="app_name">玩Android</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_index">首页</string>
    <string name="title_system">知识体系</string>
    <string name="title_navigation">常用网站</string>
    <string name="title_project">项目</string>
    <string name="title_collection">收藏</string>
    <string name="title_search">搜索</string>
    <string name="title_login">登录</string>
    <string name="title_about">关于</string>
    <string name="title_user">个人信息</string>
    <string name="about_version">版本: </string>

    <string name="title_activity_login">登录</string>
    <string name="login_user_name_hint">请输入你的用户名</string>
    <string name="login_user_name_password">请输入你的密码</string>
    <string name="login_user_name_password_again">请再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="register">注册</string>
    <string name="error_invalid_name">至少6位字符</string>
    <string name="error_invalid_password">至少6位字符</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_no_name">请输入你的用户名,至少6位字符!</string>
    <string name="error_no_password">请输入你的密码,至少6位字符!</string>
    <string name="snackbar_forgot_password">哦哦！</string>
    <string name="snackbar_register">哦哦！</string>

    <string name="about_card1_message">嗨！很高兴见到你！</string>
    <string name="about_card2_title">如果你喜欢这个Demo，欢迎和我联系！</string>
    <string name="about_google_play">评价 (Google play)</string>
    <string name="about_email">反馈 (E-mail)</string>
    <string name="about_git_hub">源代码 (GitHub)</string>
    <string name="about_address">Tianjin, China</string>
    <string name="load_error">出错啦! 点击空白处刷新 ~</string>

    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="app_name_cn">玩安卓</string>
    <string name="user_sign">过去一直去，未来一直来，只有现在...</string>

</resources>
