<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_about_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_8"
    android:layout_marginLeft="@dimen/spacing_8"
    android:layout_marginRight="@dimen/spacing_8"
    android:layout_marginTop="@dimen/spacing_8"
    android:background="@color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tv_card_about_2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_16"
            android:text="@string/about_card2_title"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_card_about_2_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_card_about_2_1"
            android:background="@color/main_background" />

        <LinearLayout
            android:id="@+id/ll_card_about_2_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_card_about_2_line"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/spacing_16"
                android:src="@mipmap/about_shop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/spacing_16"
                android:text="@string/about_google_play"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_card_about_2_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_card_about_2_shop"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/spacing_16"
                android:src="@mipmap/about_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/spacing_16"
                android:text="@string/about_email"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_card_about_2_git_hub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_card_about_2_email"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/spacing_16"
                android:src="@mipmap/about_github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/spacing_16"
                android:text="@string/about_git_hub"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_card_about_2_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_card_about_2_git_hub"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/spacing_16"
                android:src="@mipmap/about_coordinates" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/spacing_16"
                android:text="@string/about_address"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>