<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <ScrollView
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_user_name_hint"
                        android:imeOptions="actionNext"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_16" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/tv_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_user_name_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_16" />
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_64"
                    android:layout_marginTop="@dimen/spacing_24">

                    <Button
                        android:id="@+id/btn_login"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorPrimary"
                        android:padding="16dp"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/pregress_bar"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="gone" />
                </FrameLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <Button
                        android:id="@+id/btn_forgot_password"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/btn_forgot_register"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimary" />
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/email_register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_input_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/register_tv_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_user_name_hint"
                        android:imeOptions="actionNext"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_16" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/register_tv_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_user_name_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_16" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_input_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/register_tv_password_again"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_user_name_password_again"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_16" />
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_64"
                    android:layout_marginTop="@dimen/spacing_24">

                    <Button
                        android:id="@+id/btn_register"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorPrimary"
                        android:padding="16dp"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/register_pregress_bar"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>